# timebot

./: .example.env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker.yml  tarpaulin.yml
src/: healthcheck.rs  logging.rs  main.rs  state.rs
src/discord_bot/: guilds.rs  handler.rs  manager.rs  mod.rs  utils.rs
src/discord_bot/commands/: command.rs  hide.rs  mod.rs  ping.rs  say.rs  time.rs  util.rs
