[package]
name = "time_bot"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]

[dependencies]
chrono = { version = "0.4.23", features = ["clock"]}

rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
serenity = { git="https://github.com/serenity-rs/serenity", branch="next", default-features = false, features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

# logging
log = "0.4.17"
fern = "0.6.1"

# healthcheck
warp = { version = "0.3.3", default-features = false, features = [] }
chrono-tz = "0.8.1"
